--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
             <scope>test</scope>
         </dependency>
 
+        <dependency>
+            <groupId>cz.jirutka.validator</groupId>
+            <artifactId>validator-collection</artifactId>
+            <version>2.2.0</version>
+        </dependency>
+
     </dependencies>
 
     <properties>
