--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.data.mongodb.uri=mongodb://silo.soic.indiana.edu:45678/p632e
+spring.data.mongodb.uri=mongodb://silo.soic.indiana.edu:45678/p632ez
